# void-train

./: .env.example  .gitignore  README.md  docker-compose.local-mlflow-postgres.yml  pyproject.toml
.skills/void-dependency-management/: SKILL.md
.skills/void-setup-test-workflow/: SKILL.md
backend/: requirements-postgres-mlflow.txt  requirements.txt
backend/app/: main.py
backend/config/: training_catalog.yaml
backend/scripts/: __init__.py  ftp_model_client.py  import_tensorboard_to_mlflow.py  run_ftp_server.py  run_ray_serve.py  start_api.sh  start_mlflow_local.sh  sync_requirements.sh
backend/tests/: test_catalog_editor_routes.py  test_catalog_studio_routes.py  test_ftp_model_client.py  test_ftp_model_client_integration.py  test_ftp_model_registry.py  test_model_serving.py  test_process_utils.py  test_registry_routes.py  test_run_manager.py  test_task_catalog.py
backend/trainers/: common.py  models.py  train_classification.py  train_segmentation.py
docs/: ARCHITECTURE.md  E2E-REPORT.md  FTP_MODEL_REGISTRY.md  README.md  RISK_ANALYSIS_YAML_STUDIO.md  SETUP.md  UX_ANALYSIS_YAML_STUDIO.md  WEB_USAGE_GUIDE.md
docs/analysis/: CURRENT_VS_AIRFLOW.md  RISK_ANALYSIS_YAML_STUDIO.md  UX_ANALYSIS_YAML_STUDIO.md
docs/architecture/: ARCHITECTURE.md
docs/getting-started/: SETUP.md
docs/guides/: TRAIN_PY_YAML_HELP.md  WEB_USAGE_GUIDE.md
docs/operations/: FTP_MODEL_REGISTRY.md
frontend/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/e2e/: workspace-navigation.spec.ts
skills/: README.md
(+79 files in other folders)
